# stm32f446re

./: .gdbinit  Cargo.toml  Embed.toml  README.md
.cargo/: config
src/: main.rs
